Fixed Title and Form Spacing

--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 }
 
 .hero h1 {
-    padding-bottom: 10px;
+    padding: 15px 0;
     font-size: 60px;
 }
 
@@ -103,9 +103,7 @@
 
 .projects-card p {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
@@ -113,8 +111,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: nowrap;
     margin-top: 10px;
+}
+
+.projects-card-footer p {
+    max-width: 70%;
 }
 
 .projects-card-footer i {
@@ -168,7 +169,7 @@
 
 .contact  {
     padding: 0% 30%;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .contact form {
